--- a/02-touch-and-hovers/index.html
+++ b/02-touch-and-hovers/index.html
@@ -2,13 +2,24 @@
   <head>
     <title>Interactions: Level up your CSS animation skills</title>
     <!-- The default layout, resets and and text styling -->
-    <link href="stylesheets/main.css" rel="stylesheet">
+    <link href="stylesheets/main.css" rel="stylesheet" />
     <!-- Custom styling for the header -->
-    <link href="stylesheets/links.css" rel="stylesheet">
+    <link href="stylesheets/links.css" rel="stylesheet" />
+    <link href="stylesheets/tootlips.css" rel="stylesheet" />
   </head>
   <body>
     <article class="content">
-      <p>... and here is some text. This text shows how <a href="https://cssanimation.rocks/#fresh">CSS animation</a> can help us make links be more fun and useful...</p>
+      <p>
+        ... and here is some text. This text shows how
+        <a
+          class="anchor-tooltip"
+          href="https://cssanimation.rocks/#fresh"
+          title="Learn all about animating in browser"
+          >CSS animation</a
+        >
+        can help us make links be more fun and useful...
+      </p>
     </article>
+    <script src="./js/tooltips.js"></script>
   </body>
 </html>
